@@ -41,6 +41,7 @@ Lars Theorin
    initial patch
  - for an initial patch to enable RTP over TCP on SAT>IP
  - for fixing the SRC parameter with --output-VLC-satip
+ - for including all service pids in the VLC SAT>IP output
 
 Manuel Reimer
  - for pointing to FTBC on wirbelscan plugin (missing <cstdint> in countries.h)
