@@ -1197,11 +1197,12 @@ void PrintVLCsatip(std::vector<TChannel>& List) {
         }
 
      ss << "&amp;pids=0,16,17,18";
-     if (c.PMT > 0)           ss << ',' << c.PMT;
-     if (c.VPID.PID > 0)      ss << ',' << c.VPID.PID;
-     if (c.APIDs.Count() > 0) ss << ',' << c.APIDs[0].PID;
-     if (c.DPIDs.Count() > 0) ss << ',' << c.DPIDs[0].PID;        
-     if (c.TPID > 0)          ss << ',' << c.TPID;
+     if (c.PMT > 0)                        ss << ',' << c.PMT;
+     if (c.VPID.PID > 0)                   ss << ',' << c.VPID.PID;
+     for (int i=0; i<c.APIDs.Count(); i++) ss << ',' << c.APIDs[i].PID;
+     for (int i=0; i<c.DPIDs.Count(); i++) ss << ',' << c.DPIDs[i].PID;
+     for (int i=0; i<c.SPIDs.Count(); i++) ss << ',' << c.SPIDs[i].PID;
+     if (c.TPID > 0)                       ss << ',' << c.TPID;
      ss << "</location>" << std::endl;
 
      ss << INDENT << "<extension application=" << '"' << AppUrl << '"' << ">" << std::endl;
