@@ -188,3 +188,4 @@
   greater-than sign to the five default XML char entities.
 * prefer StrToInt and LeftFill/RightFill in output formats
 * fix SRC parameter with VLC output for SAT>IP
+* include all service pids in the VLC SAT>IP output
